discussion/kv_engine/170454/170454_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50874: Replica to active with de-duped checkpoint [master]

Test cherry-picked to tip of master branch.

Change-Id: I38c683677a32c87226048f8fe632362f0ed13aee

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-02-10 09:57:10.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-10 10:07:00.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36916/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36916/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17210/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18255/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18255/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5127/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5127/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17517/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25617/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25617/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15477/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:1675:27: error: redefinition of "getNumCheckpoints" [clang-diagnostic-error]
size_t CheckpointManager::getNumCheckpoints() const {
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:1181:27: note: previous definition is here
size_t CheckpointManager::getNumCheckpoints() const {
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:581:12: error: class member cannot be redeclared [clang-diagnostic-error]
    size_t getNumCheckpoints() const;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:355:12: note: previous declaration is here
    size_t getNumCheckpoints() const;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15477/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:1675:27:
error: redefinition of "getNumCheckpoints" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15477/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43766/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\checkpoint_manager.h(581): error C2535: "size_t CheckpointManager::getNumCheckpoints(void) const": member function already defined or declared ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43766/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5186/ : FAILURE

Compile error at [2022-02-10T10:00:54.176Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:581:12:
error: ?size_t CheckpointManager::getNumCheckpoints() const? cannot be overloaded with ?size_t CheckpointManager::getNumCheckpoints() const?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5186/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16296/ : FAILURE

Compile error at [2022-02-10T09:59:45.252Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:581:12:
error: class member cannot be redeclared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14321/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
